--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       <h2 id="Coding Languages">Coding Languages</h2>
       
         <ul>
-          <li>HTML - Intermediate</li>
+          <li>HTML - Basic</li>
           <li>CSS - Basic</li>
           <li>JavaScript - Basic</li>
        </ul>
