--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Willem Uys Resumé</title>
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   </head>
   <body>
     <h1>Willem Uys</h1>
