--- a/index.html
+++ b/index.html
@@ -8,13 +8,16 @@
 <header>
   
   <P> <img src="C:\Users\willem\Documents\GitHub\myResum-\Images\Willem2.png" alt="willem pic" width="250" height="300"> </P>
+  
   <h1>Willem Uys</h1>
-  <p>I am a Healthcare Specialist and over the last few years achieved great success in Business Development, Health Professional Network and Project Implementation space.  I focus on digitalisation of processes and can manage multiple projects at a time, solve complex problems and implement solutions.
+  
+  <p>
+    I am a Healthcare Specialist and over the last few years achieved great success in Business Development, Health Professional Network and Project Implementation space.  I focus on digitalisation of processes and can manage multiple projects at a time, solve complex problems and implement solutions.
 
     I am a positive, deadline driven individual that is always willing to take on new challenges and additional responsibilities. A positive attitude accompanied by a solution driven approach makes me ideal for designing system solutions, managing projects and key client accounts. 
     
     Having more than two decades of experience in the Healthcare environment provides me with a clear understanding of obstacles and solutions for this industry.
-     </p>
+  </p>
     
  </header>
 
