--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <header>
   
-  <P> <img src="C:\Users\willem\Documents\GitHub\myResum-\Images\Willem2.png" alt="willem pic" width="250" height="300"> </P>
+  <P> <img src="C:\Users\willem\Documents\GitHub\myResume\Images\Willem2.png" alt="willem pic" width="250" height="300"> </P>
   
   <h1>Willem Uys</h1>
   
