--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <header>
   
-  <P> <img src="C:\Users\willem\Documents\GitHub\myResume\Images\Willem2.png" alt="willem pic" width="250" height="300"> </P>
+  <P> <img src="Images\Willem2.png" alt="willem pic" width="250" height="300"> </P>
   
   <h1>Willem Uys</h1>
   
@@ -47,7 +47,7 @@
     <h2 id="education">Education</h2>
     
     <h3> Grade 12</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
+      <p> ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
       
       <h3> Discovery Institute</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
