test on fixing dots in contacts

--- a/index.html
+++ b/index.html
@@ -184,16 +184,16 @@
             src="Images\Mobilenumber.png"/>
           </a>          
            
-          <a href="https://www.linkedin.com/school/codespaceza/" 
-              target="_blank">
+          <a href="https://www.linkedin.com/school/codespaceza/"class="imglink1" target="_blank">
               <img class="icons" 
-              src="Images\Linkedin.png"/>
-          </a>
+              src="Images\Linkedin.png"
+              width=50px/>
+                    </a>
           
-          <a href="mailto:willem@spesnetgroup.com"
-              target="_blank">
-              <img class="icons" 
-            src="Images\email.png"/>
+          <a href="mailto:willem@spesnetgroup.com"class="imglink3">
+            <img class="icons"src="Images\email.png"
+            alt="willem email"
+             width="50px">
           </a> 
 
         </ul>
